--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --blue-neon: #11ffee;
   --pink-neon: #ff1199;
